--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,18 @@ button.btn-lg {
   border-radius: 0;
 }
 
+/* .card-deck {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  grid-template-rows: repeat(2, auto);  
+  gap: 10px;
+  max-width: 600px;
+
+  margin: auto;
+} */
+
+
+
 .result {
   padding: 60px 20px 20px;
 }
